--- a/EastFive.Azure.Tests.csproj
+++ b/EastFive.Azure.Tests.csproj
@@ -199,25 +199,25 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BlackBarLabs.Api.Tests\EastFive.Api.Tests.csproj">
+    <ProjectReference Include="..\EastFive.Api.Tests\EastFive.Api.Tests.csproj">
       <Project>{fd0de0da-5fc5-43ca-a99b-8c64fc973ea1}</Project>
       <Name>EastFive.Api.Tests</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BlackBarLabs.Api\EastFive.Api.csproj">
+    <ProjectReference Include="..\EastFive.Api\EastFive.Api.csproj">
       <Project>{aaa1724b-0787-4ce1-bad5-e3c930db07c1}</Project>
       <Name>EastFive.Api</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BlackBarLabs.Core\EastFive.Core.csproj">
-      <Project>{aec927ef-6aae-4533-bbf6-539643684002}</Project>
-      <Name>EastFive.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BlackBarLabs.Web\EastFive.Web.csproj">
-      <Project>{5bb52391-2704-44c0-bc8a-dbbe31498814}</Project>
-      <Name>EastFive.Web</Name>
     </ProjectReference>
     <ProjectReference Include="..\EastFive.Azure\EastFive.Azure.csproj">
       <Project>{e2f3fcfb-89c8-47b3-b3d2-ae35e52a84fa}</Project>
       <Name>EastFive.Azure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EastFive.Core\EastFive.Core.csproj">
+      <Project>{aec927ef-6aae-4533-bbf6-539643684002}</Project>
+      <Name>EastFive.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EastFive.Web\EastFive.Web.csproj">
+      <Project>{5bb52391-2704-44c0-bc8a-dbbe31498814}</Project>
+      <Name>EastFive.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
